# whatsapp-business-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
benches/benches/: batch_benches.rs  main.rs  messages_benches.rs
examples/bulls-n-cows/: Cargo.toml  README.md
examples/bulls-n-cows/src/: helpers.rs  main.rs
src/: app.rs  batch.rs  catalog.rs  client.rs  error.rs  lib.rs  message.rs  server.rs  waba.rs  webhook_service.rs
src/rest/: client.rs  macros.rs  mod.rs  server.rs
tests/: app_test.rs  batch_tests.rs  catalog_tests.rs  messages_tests.rs  waba_tests.rs
tests/common/: mod.rs
