[package]
name = "whatsapp-business-rs"
version = "0.3.1"
edition = "2024"
authors = ["Victor <victorayo206@example.com>"]
description = "Rust SDK for the WhatsApp Business API — bulk messaging, batching, and multi-tenant support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/veecore/whatsapp-business-rs"
documentation = "https://docs.rs/whatsapp-business-rs"
readme = "README.md"
keywords = ["whatsapp", "batch", "sdk", "messaging", "multi-tenant"]
categories = ["api-bindings", "web-programming::http-client", "network-programming", "asynchronous"]
homepage = "https://github.com/veecore/whatsapp-business-rs"
build = "build.rs"
exclude = [".github", "assets", "benches", "tests", "examples"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0.12"
async-stream = "0.3.6"
futures = "0.3.31"
paste = "1.0.15"
base64 = "0.22.1"

# --- Optional dependencies for the `batch` feature --
serde-metaform = { version = "1.0.1", optional = true }

# --- Optional dependencies for the `server` feature ---
axum = {version = "0.8.4", optional = true}
hmac = {version = "0.12.1", optional = true}
sha2 = {version = "0.10.9", optional = true}
hex = {version = "0.4.3", optional = true}
subtle = {version = "2.6.1", optional = true}

# --- Optional dependencies for the `media_ext` feature ---
infer = {version = "0.19.0", default-features = false, optional = true}
serde_urlencoded = "0.7.1"

[features]
default = ["batch", "server", "media_ext"]
incoming_message_ext = []
batch = ["serde-metaform"]
server = ["axum", "hmac", "sha2", "hex", "subtle"]
media_ext = ["infer"]
# Used to allow integration tests to override the API base URL.
# This is intentionally disabled in normal builds to avoid any runtime cost
test-mode = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
wiremock = "0.6.5"
temp-env = "0.3.6"

[[bench]]
name = "benches"
harness = false